# weldingrobot-de-pipeline

./: .gitignore  LICENSE  Makefile  README.md  dashboard.py  pyproject.toml
.github/workflows/: ci.yml
app/: dashboard.py
config/: thresholds.yaml
scripts/: demo_clean.sh  demo_run.sh
src/weld_pipeline/: cli.py  logging_conf.py
src/weld_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/weld_pipeline/config/: loader.py
src/weld_pipeline/dashboard/: i18n.py  pipeline_runner.py  views.py
src/weld_pipeline/generate/: synthetic_factory.py
src/weld_pipeline/io/: paths.py
src/weld_pipeline/report/: alerts.py  kpi.py
src/weld_pipeline/transform/: cleaning.py  dq.py
tests/: test_alerts.py  test_cleaning.py  test_cli.py  test_config_loader.py  test_dq.py  test_kpi.py  test_project_structure.py  test_smoke_imports.py
