[project]
name = "weld-pipeline"
version = "0.1.0"
description = "Industrial-style DE pipeline for welding robot data"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Levente Harmati" }]
keywords = ["data-engineering", "pipeline", "manufacturing", "pandas", "streamlit"]

dependencies = [
  "pandas",
  "numpy",
  "pyyaml",
  "pydantic",
  "rich",
  "streamlit"
]

[project.urls]
Repository = "https://github.com/dataleventeharmati/weldingrobot-de-pipeline"

[project.scripts]
weld-pipeline = "weld_pipeline.cli:main"

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "ruff"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=src/weld_pipeline --cov-report=term-missing"
pythonpath = ["src"]

[tool.coverage.run]
branch = true
source = ["src/weld_pipeline"]

[tool.coverage.report]
fail_under = 70

[tool.ruff]
line-length = 100
